--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,9 +33,7 @@ title: "none"
 
 
 <div class="subscription-box center-col flex-all">
-	<div class="sub-inner">
-		mailchimp
-	</div>
+	{% include mailchimp-signup.html %}
 </div>
 
 <div class="neighbour-posts center-col flex-all">
