--- a/_includes/mailchimp-signup.html
+++ b/_includes/mailchimp-signup.html
@@ -2,7 +2,7 @@
 <div id="mc_embed_signup">
 <form action="https://sunlightafterdark.us19.list-manage.com/subscribe/post?u=a0b444f385a13e98db7ff5939&amp;id=8068880219" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<h2>Subscribe</h2>
+	<h5>Subscribe for updates</h5>
     <div class="mc-field-group">
 	   <label for="mce-EMAIL">Email Address </label>
 	   <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
