--- a/css/main.css
+++ b/css/main.css
@@ -133,6 +133,28 @@ a:visited{
 	min-height: 100vh;
 }
 
+label{
+	font-size: 1em;
+	padding: 0.5em 0;
+}
+
+.button{
+	padding: 0.5em 0;
+	font-size: 1em;
+	background-color: #d83f41;
+	color: white;
+	width: 100%;
+}
+
+#mc_embed_signup{
+	padding:1em;
+}
+
+#mc-embedded-subscribe-form{
+	display: flex;
+	justify-content: center;
+}
+
 .snow{
 	width: 100%;
 	height: 900px;
