--- a/css/main.css
+++ b/css/main.css
@@ -136,23 +136,43 @@ a:visited{
 label{
 	font-size: 1em;
 	padding: 0.5em 0;
+	font-family: Georgia, serif;
+	letter-spacing: 0em;
 }
 
 .button{
 	padding: 0.5em 0;
 	font-size: 1em;
+	font-family: Georgia, serif;
+	letter-spacing: 0em;
 	background-color: #d83f41;
 	color: white;
 	width: 100%;
+	border: none;
+}
+
+.checkmark{
+	height: 36px;
+	width: 36px;
 }
 
 #mc_embed_signup{
 	padding:1em;
 }
 
+#mce-EMAIL{
+	height: 36px;
+}
+
 #mc-embedded-subscribe-form{
 	display: flex;
 	justify-content: center;
+}
+
+.mc-field-group{
+	padding: 1em 0;
+	display: flex;
+	flex-direction: column;
 }
 
 .snow{
