--- a/css/main.css
+++ b/css/main.css
@@ -149,6 +149,11 @@ label{
 	color: white;
 	width: 100%;
 	border: none;
+	cursor: pointer;
+}
+
+.button:hover{
+	background-color: #9d3259;
 }
 
 .checkmark{
@@ -157,7 +162,7 @@ label{
 }
 
 #mc_embed_signup{
-	padding:1em;
+	padding:1em 1em 2.5em 1em;
 }
 
 #mce-EMAIL{
@@ -170,7 +175,7 @@ label{
 }
 
 .mc-field-group{
-	padding: 1em 0;
+	padding-bottom: 1em;
 	display: flex;
 	flex-direction: column;
 }
