--- a/_includes/mailchimp-signup.html
+++ b/_includes/mailchimp-signup.html
@@ -2,7 +2,7 @@
 <div id="mc_embed_signup">
 <form action="https://sunlightafterdark.us19.list-manage.com/subscribe/post?u=a0b444f385a13e98db7ff5939&amp;id=8068880219" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<h5>Subscribe for updates</h5>
+	<h5 style="padding: 1em 0 0.5em 0;">Subscribe for updates</h5>
     <div class="mc-field-group">
 	   <label for="mce-EMAIL">Email Address </label>
 	   <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
@@ -16,12 +16,15 @@
         </ul>
     </div>
 	
-    <div id="mce-responses" class="clear">
-		<div class="response" id="mce-error-response"></div>
-		<div class="response" id="mce-success-response"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+       <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a0b444f385a13e98db7ff5939_8068880219" tabindex="-1" value=""></div>
     <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+
+    <div id="mce-responses" class="clear">
+        <div class="response" id="mce-error-response"></div>
+        <div class="response" id="mce-success-response"></div>
+    </div> 
+
     </div>
 </form>
 </div>
