--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,8 +11,8 @@
 		<a href="/blog">blog</a>
 		<a href="/presskit">presskit()</a>
 		<a href="/contact">contact</a>
-		<a href="">twitter</a>
-		<a href="" style="padding-right: 0">discord</a>
+		<a href="https://twitter.com/BaronBlackmore"><img alt="twitter logo" src="/images/twitter-logo.png"></a>
+		<a href="" style="padding-right: 0"><img alt="discord logo" src="/images/discord-logo.png"></a>
 	</div>
 
 	<div id="mobile-nav">
@@ -21,8 +21,8 @@
 		<a href="/presskit">presskit()</a>
 		<a href="/contact">contact</a>
 		<div class="social-images">
-			<a href="">twitter</a>
-			<a href="">discord</a>
+			<a href="https://twitter.com/BaronBlackmore"><img alt="twitter logo" src="/images/twitter-logo.png"></a>
+			<a href="" ><img alt="discord logo" src="/images/discord-logo.png"></a>
 		</div>
 	</div>
 
