--- a/css/main.css
+++ b/css/main.css
@@ -248,6 +248,8 @@ label{
 	margin-top:720px;
 	background-color: transparent;
 	padding: 0 20px;
+	display: flex;
+	flex-direction: column;
 }
 
 .frontpage-content img{
@@ -286,6 +288,17 @@ label{
 
 .navbar body{
 	color: white;
+}
+
+.navbar img{
+	height: 60px;
+}
+
+.contact-info{
+	padding:3em 1em;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .post-body{
