--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,7 +12,7 @@
 		<a style="display: none;" href="/presskit">presskit()</a>
 		<a href="/contact">contact</a>
 		<a href="https://twitter.com/BaronBlackmore"><img alt="twitter logo" src="/images/twitter-logo.png"></a>
-		<a href="" style="padding-right: 0"><img alt="discord logo" src="/images/discord-logo.png"></a>
+		<a href="https://discord.gg/wp7ZpdJ" style="padding-right: 0"><img alt="discord logo" src="/images/discord-logo.png"></a>
 	</div>
 
 	<div id="mobile-nav">
@@ -22,7 +22,7 @@
 		<a href="/contact">contact</a>
 		<div class="social-images">
 			<a href="https://twitter.com/BaronBlackmore"><img alt="twitter logo" src="/images/twitter-logo.png"></a>
-			<a href="" ><img alt="discord logo" src="/images/discord-logo.png"></a>
+			<a href="https://discord.gg/wp7ZpdJ" ><img alt="discord logo" src="/images/discord-logo.png"></a>
 		</div>
 	</div>
 
