--- a/css/main.css
+++ b/css/main.css
@@ -192,7 +192,7 @@ label{
 	width: 100%;
 	height: 900px;
 	position: absolute;
-	top: 40px;
+	top: 0px;
 	z-index: -10;
 
 	background-image: url('/images/snow3.png'), url('/images/snow2.png'), url('/images/snow1.png');
@@ -209,7 +209,7 @@ label{
 
 .hero-front{
 	position: absolute;
-	top: 40px;
+	top: 0px;
 	width: 100%;
 	height: 900px;
 	display: flex;
@@ -245,7 +245,7 @@ label{
 }
 
 .frontpage-content{
-	margin-top:720px;
+	margin-top:580px;
 	background-color: transparent;
 	padding: 0 20px;
 	display: flex;
@@ -300,6 +300,7 @@ label{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	text-align: center;
 }
 
 .post-body{
@@ -595,10 +596,12 @@ label{
 
 	.snow{
 		height: 450px;
+		top: 40px;
 	}
 
 	.hero-front{
 		height: 450px;
+		top:40px;
 	}
 
 	.hero-front-image{
