many tiny things

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <div id="nav" class="navbar center-col">
-	<div class="flex-left">
+	<div class="flex-left no-mobile">
 		<a href="https://wintersolacegame.com" style="padding-left: 0">Winter Solace</a>
 	</div>
 	<div class="flex-right no-mobile">
