--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <div id="nav" class="navbar center-col">
 	<div class="flex-left no-mobile">
-		<a href="https://wintersolacegame.com" style="padding-left: 0">Winter Solace</a>
+		<a href="https://wintercastgame.com" style="padding-left: 0">Wintercast</a>
 	</div>
 	<div class="flex-right no-mobile">
 		<div class="hamburger-icon" onclick="hamburgerSwap(this);openNav()">
@@ -16,7 +16,7 @@
 	</div>
 
 	<div id="mobile-nav">
-		<a href="https://wintersolacegame.com">Home</a>
+		<a href="https://wintercastgame.com">Home</a>
 		<a href="/blog">blog</a>
 		<a style="display: none;" href="/presskit">presskit()</a>
 		<a href="/contact">contact</a>
