--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,11 +8,11 @@ title: "none"
 	<meta property="og:type" content="article" />
 	<meta property="og:title" content="{{page.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}" />
 	<meta property="og:description" content="{{content | strip_html | strip_newlines | truncate: 190 | capitalize }}"/>
-	<meta property="og:image" content="http://www.wintersolacegame.com/images/{{ page.url | replace: '/' , '-' | remove_first: '-' | remove: '.html' }}.png" />
+	<meta property="og:image" content="http://www.wintercastgame.com/images/{{ page.url | replace: '/' , '-' | remove_first: '-' | remove: '.html' }}.png" />
 
 	<!-- twitter -->
 	<meta name="twitter:description" content="{{content | strip_html | strip_newlines | truncate: 190  | capitalize }}">
-	<meta name="twitter:image" content="http://www.wintersolacegame.com/images/{{ page.url | replace: '/' , '-' | remove_first: '-' | remove: '.html' }}.png">
+	<meta name="twitter:image" content="http://www.wintercastgame.com/images/{{ page.url | replace: '/' , '-' | remove_first: '-' | remove: '.html' }}.png">
 </head>
 
 <!-- for facebook to find a preview -->
