--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta description="Winter Solace is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war.">
+	<meta description="Wintercast is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war.">
 	<meta keywords="Indie, RPG, Game, Game Design, Pixel Art, New RPG Game, Undertale Game">
 	<meta author="Sam Ballard">
 
@@ -12,17 +12,17 @@
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
 	<!-- facebook tags -->
-	<meta property="og:url" content="https://wintersolacegame.com{{ page.url }}" />
-	<meta property="og:image" content="http://www.wintersolacegame.com/images/social.png" />
+	<meta property="og:url" content="https://wintercastgame.com{{ page.url }}" />
+	<meta property="og:image" content="http://www.wintercastgame.com/images/social.png" />
 	<meta property="og:image:width" content="1500">
 	<meta property="og:image:height" content="900">
 
 	<!-- twitter meta -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Winter Solace">
+	<meta name="twitter:title" content="Wintercast">
 	<meta name="twitter:site" content="@baronblackmore">
 	<meta name="twitter:description" content="An action-adventure RPG where you are a vampire wizard, trying to make friends during a civil war.">
-	<meta name="twitter:image" content="http://www.wintersolacegame.com/images/social.png">
+	<meta name="twitter:image" content="http://www.wintercastgame.com/images/social.png">
 	<meta name="twitter:image:width" content="1200">
 	<meta name="twitter:image:height" content="720">
 </head>
