--- a/_includes/mailchimp-signup.html
+++ b/_includes/mailchimp-signup.html
@@ -1,46 +1,9 @@
 <!-- Begin Mailchimp Signup Form -->
-<div id="mc_embed_signup">
-<form action="https://sunlightafterdark.us19.list-manage.com/subscribe/post?u=a0b444f385a13e98db7ff5939&amp;id=8068880219" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<h5 style="padding: 1em 0 0.5em 0;">Subscribe for updates</h5>
-    <div class="mc-field-group">
-	   <label for="mce-EMAIL">Email Address </label>
-	   <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-    </div>
-    
-    <div class="mc-field-group input-group">
-        <strong>Tell me about </strong>
-        <ul>
-            <li><input type="checkbox" value="1" name="group[4432][1]" id="mce-group[4432]-4432-0" checked><label for="mce-group[4432]-4432-0"> Game design posts</label></li>
-            <li><input type="checkbox" value="2" name="group[4432][2]" id="mce-group[4432]-4432-1" checked><label for="mce-group[4432]-4432-1"> Game updates</label></li>
-        </ul>
-    </div>
-	
-       <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a0b444f385a13e98db7ff5939_8068880219" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-
-    <div id="mce-responses" class="clear">
-        <div class="response" id="mce-error-response"></div>
-        <div class="response" id="mce-success-response"></div>
-    </div> 
-
-    </div>
-</form>
-</div>
-
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';fnames[6]='MMERGE6';ftypes[6]='radio';fnames[7]='MMERGE7';ftypes[7]='radio';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-
-<!--End mc_embed_signup-->
-
-
-
-<!-- Begin Mailchimp Signup Form -->
 
 <div id="mc_embed_signup">
 <form action="https://wintercastgame.us18.list-manage.com/subscribe/post?u=09bb64dc29456376345c124a2&amp;id=12f54bc051" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-    <h2>Subscribe</h2>
+    <h5>Subscribe for updates</h5>
 <div class="mc-field-group">
     <label for="mce-EMAIL">Email Address </label>
     <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
