--- a/_includes/mailchimp-signup.html
+++ b/_includes/mailchimp-signup.html
@@ -1,9 +1,10 @@
+
 <!-- Begin Mailchimp Signup Form -->
 
 <div id="mc_embed_signup">
 <form action="https://wintercastgame.us18.list-manage.com/subscribe/post?u=09bb64dc29456376345c124a2&amp;id=12f54bc051" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-    <h5>Subscribe for updates</h5>
+    <h5 style="padding: 1em 0 0.5em 0;">Subscribe for updates</h5>
 <div class="mc-field-group">
     <label for="mce-EMAIL">Email Address </label>
     <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
