--- a/css/main.css
+++ b/css/main.css
@@ -536,10 +536,14 @@ label{
 	justify-content:center;
 }
 
-	.frontpage-content h5{
-		color: white;
-		padding: 6em 0 3em 0;
-	}
+.frontpage-content h5{
+	color: white;
+	padding: 6em 0 3em 0;
+}
+
+.frontpage-content p{
+	color: white;
+}
 
 @media(max-width: 660px){
 
