--- a/css/main.css
+++ b/css/main.css
@@ -255,13 +255,30 @@ label{
 .frontpage-content{
 	margin-top:680px;
 	background-color: transparent;
-	padding: 0 20px;
+	padding: 0;
 	display: flex;
 	flex-direction: column;
+	text-align: center;
 }
 
 .frontpage-content img{
 	width: 100%;
+}
+
+.frontpage-content h5{
+	color: white;
+	padding: 6em 0 3em 0;
+}
+
+.frontpage-content p{
+	color: white;
+	width: 66%;
+	margin: auto;
+}
+
+
+.frontpage-feature{
+	padding:1em 0 3em 0;
 }
 
 .flex-all{
@@ -536,14 +553,6 @@ label{
 	justify-content:center;
 }
 
-.frontpage-content h5{
-	color: white;
-	padding: 6em 0 3em 0;
-}
-
-.frontpage-content p{
-	color: white;
-}
 
 @media(max-width: 660px){
 
@@ -624,6 +633,10 @@ label{
 
 	.frontpage-content{
 		margin-top:360px;
+	}
+
+	.frontpage-content p{
+		width: 100%;
 	}
 
 
