--- a/css/main.css
+++ b/css/main.css
@@ -272,13 +272,13 @@ label{
 
 .frontpage-content p{
 	color: white;
-	width: 66%;
+	width: 60%;
 	margin: auto;
 }
 
 
 .frontpage-feature{
-	padding:1em 0 3em 0;
+	padding:1.5em 0 5em 0;
 }
 
 .flex-all{
@@ -636,7 +636,13 @@ label{
 	}
 
 	.frontpage-content p{
-		width: 100%;
+		width: auto;
+		padding: 0 20px;
+	}
+
+	.frontpage-content h5{
+		padding-left: 20px;
+		padding-right: 20px;
 	}
 
 
