--- a/css/main.css
+++ b/css/main.css
@@ -253,7 +253,7 @@ label{
 }
 
 .frontpage-content{
-	margin-top:680px;
+	margin-top:620px;
 	background-color: transparent;
 	padding: 0;
 	display: flex;
@@ -657,6 +657,7 @@ label{
 
 	.frontpage-content h5{
 		padding-left: 20px;
+		padding-top: 3em;
 		padding-right: 20px;
 	}
 
