--- a/css/main.css
+++ b/css/main.css
@@ -259,6 +259,7 @@ label{
 	display: flex;
 	flex-direction: column;
 	text-align: center;
+	max-width: 840px;
 }
 
 .frontpage-content img{
@@ -266,13 +267,15 @@ label{
 }
 
 .frontpage-content h5{
+	max-width: 740px
+	margin: auto;
 	color: white;
 	padding: 6em 0 3em 0;
 }
 
 .frontpage-content p{
 	color: white;
-	width: 60%;
+	max-width: 430px;
 	margin: auto;
 }
 
@@ -651,7 +654,6 @@ label{
 	}
 
 	.frontpage-content p{
-		width: auto;
 		padding: 0 20px;
 	}
 
@@ -659,6 +661,16 @@ label{
 		padding-left: 20px;
 		padding-top: 3em;
 		padding-right: 20px;
+	}
+
+	.frontpage-feature{
+		height: 100%;
+		width: auto;
+	}
+
+	.video-holder{
+		min-height: 100vw;
+		overflow: hidden;
 	}
 
 	.team{
