--- a/css/main.css
+++ b/css/main.css
@@ -664,12 +664,13 @@ label{
 	}
 
 	.frontpage-feature{
-		height: 100%;
+		height: 80vw;
 		width: auto;
 	}
 
 	.video-holder{
-		min-height: 100vw;
+		display: flex;
+			justify-content: center;
 		overflow: hidden;
 	}
 
