--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
   				<div class="bar3"></div>
 		</div>
 		<a href="/blog">blog</a>
-		<a style="display: none;" href="/presskit">presskit()</a>
+		<a href="/presskit">presskit()</a>
 		<a href="/contact">contact</a>
 		<a href="https://twitter.com/BaronBlackmore"><img alt="twitter logo" src="/images/twitter-logo.png"></a>
 		<!-- <a href="https://discord.gg/wp7ZpdJ" style="padding-right: 0"><img alt="discord logo" src="/images/discord-logo.png"></a> -->
@@ -18,7 +18,7 @@
 	<div id="mobile-nav">
 		<a href="https://wintercastgame.com">Home</a>
 		<a href="/blog">blog</a>
-		<a style="display: none;" href="/presskit">presskit()</a>
+		<a href="/presskit">presskit()</a>
 		<a href="/contact">contact</a>
 		<div class="social-images">
 			<a href="https://twitter.com/BaronBlackmore"><img alt="twitter logo" src="/images/twitter-logo.png"></a>
